--- a/aframe/index.html
+++ b/aframe/index.html
@@ -136,10 +136,10 @@
                 dur="8000"
                 easing="linear"
                 to="0 1.6 -10"></a-animation> -->
-     <!--   <a-entity cursor="fuse: false; fuseTimeout: 500"
+        <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.028"
-            material="color: black; shader: flat"> -->
+            material="color: black; shader: flat">
 
         </a-entity>
       </a-camera>
