--- a/aframe/index.html
+++ b/aframe/index.html
@@ -182,14 +182,11 @@
       <a-entity id='camera-entity' position="0 1.6 0">
       <a-camera id='camera-test'>
         
-   <!--     <a-animation attribute="position"
-                dur="8000"
-                easing="linear"
-                to="0 1.6 -10"></a-animation> -->
+   <!-- TODO  Put this back in to get the gaze pointer thing.
         <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.028"
-            material="color: black; shader: flat">
+            material="color: black; shader: flat"> -->
 
         </a-entity>
       </a-camera>
