Stop logging for getCurrentBelowTile

--- a/aframe/index.html
+++ b/aframe/index.html
@@ -78,7 +78,7 @@
         
 
           if (x > minX && x < maxX && z > minZ && z < maxZ) {
-            console.log('getCurrent below tile. id = ' + tile.id + ', status = ' + tile.status);
+           // console.log('getCurrent below tile. id = ' + tile.id + ', status = ' + tile.status);
             return tile;
           }
         }
