--- a/aframe/index.html
+++ b/aframe/index.html
@@ -23,19 +23,28 @@
       let player = {x: 0, z: 0};
       let tiles = [];
       let moving = false;
+      let gameStarted = false;
       let gameRunning = true;
       let moveRequested = false;
       let timeClicked;
+      let menuElement;
 
       let tileDestination = {x:0, z:0};
+
+      function startGame() {
+        gameRunning = true;
+        document.getElementById('menu').setAttribute('material', 'opacity: 0.1;');
+      }
 
       function resetStartGame() {
         const floorLevel = 0.5;
 
+        document.getElementById('menu').setAttribute('material', 'opacity: 1;');
+
         player = {x: 0, z: 0};
         tiles = [];
         moving = false;
-        gameRunning = true;
+        gameRunning = false;
         moveRequested = false;
    
 
@@ -309,6 +318,15 @@
               return;
             }
 
+            if (evt.target.id == 'menu') {
+              console.log("Game start requested");
+              startGame();
+            }
+
+            if (!gameRunning) {
+              return;
+            }
+
             for (tile in tiles) {
               if (evt.target.id == tiles[tile].id && isInline(tiles[tile])) {
                 //document.getElementById('scream').play();
@@ -429,7 +447,7 @@
       animation="property: object3D.position.y; to: 3; dir: alternate; dur: 500; loop: true"
       animation="property: object3D.rotation.y; to: 0.8; dir: alternate; dur: 500; loop: true"></a-box>
 
-      <a-box id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 3.3 -1"></a-box>
+      <a-box raycaster-listener id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 2.8 -1.3"></a-box>
 
      
      <!-- 
