--- a/aframe/index.html
+++ b/aframe/index.html
@@ -447,7 +447,7 @@
       animation="property: object3D.position.y; to: 3; dir: alternate; dur: 500; loop: true"
       animation="property: object3D.rotation.y; to: 0.8; dir: alternate; dur: 500; loop: true"></a-box>
 
-      <a-box raycaster-listener id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 2.8 -1.3"></a-box>
+      <a-box raycaster-listener class="clickable" id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 2.8 -1.3"></a-box>
 
      
      <!-- 
