--- a/aframe/index.html
+++ b/aframe/index.html
@@ -514,12 +514,12 @@
 
         
    <!-- TODO  Put this back in to get the gaze pointer thing. -->
-    <!--<a-entity cursor="fuse: false; fuseTimeout: 500"
+    <a-entity cursor="fuse: false; fuseTimeout: 500"
             position="0 0 -1"
             geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.028"
             material="color: black; shader: flat"> 
 
-          </a-entity>  -->
+          </a-entity>  
 
 
 
