--- a/aframe/index.html
+++ b/aframe/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Unnamed game!</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4D6N4P07B7"></script>
     <script>
