--- a/aframe/index.html
+++ b/aframe/index.html
@@ -490,7 +490,18 @@
       animation="property: object3D.position.y; to: 3; dir: alternate; dur: 500; loop: true"
       animation="property: object3D.rotation.y; to: 0.8; dir: alternate; dur: 500; loop: true"></a-box>
 
-      <a-box raycaster-listener class="clickable" id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 2.8 -1.3"></a-box>
+     <!-- <a-box raycaster-listener class="clickable" id="menu" scale="1 1 0.1" material="src: menu.png;" position="0 2.8 -1.3"></a-box> -->
+
+      <a-entity
+      raycaster-listener class="clickable" 
+    id="menu"
+    position="0 2.8 -1.1"
+    geometry="primitive: plane; width: 2; height:auto"
+    material="color: #555555; transparent: true; opacity: 0.60;"
+    text="anchor: center; baseline: center; wrapCount: 25;
+        transparent: true; opacity: 0.90; color: #AAAAFF;
+        value: Level: 1-1  Press Here To Start"
+    ></a-entity>
 
      
      <!-- 
@@ -521,6 +532,8 @@
             material="color: black; shader: flat"> 
 
           </a-entity>  
+
+    
 
 
 
