--- a/aframe/index.html
+++ b/aframe/index.html
@@ -78,6 +78,35 @@
             {x: -2, z: -6, type: 'ONE'},
             {x: -3, z: -6, type: 'ONE'},
             {x: -4, z: -6, type: 'END'},
+          ]},
+          {name: '1-4',
+           steps: 
+          [
+            {x: 0, z: 0, type: 'START'},
+            {x: 0, z: -1, type: 'ONE'},
+            {x: 1, z: -1, type: 'ONE'},
+            {x: 2, z: -1, type: 'ONE'},
+            {x: 3, z: -1, type: 'ONE'},
+            {x: 3, z: -2, type: 'ONE'},
+            {x: 3, z: -3, type: 'ONE'},
+            {x: 4, z: -3, type: 'ONE'},
+            {x: 4, z: -4, type: 'ONE'},
+            {x: 3, z: -4, type: 'ONE'},
+            {x: 3, z: -5, type: 'ONE'},
+            {x: 3, z: -6, type: 'ONE'},
+            {x: 2, z: -6, type: 'ONE'},
+            {x: 1, z: -6, type: 'ONE'},
+            {x: 1, z: -7, type: 'ONE'},
+            {x: 0, z: -7, type: 'ONE'},
+            {x: -1, z: -7, type: 'ONE'},
+            {x: -2, z: -7, type: 'ONE'},
+            {x: -2, z: -6, type: 'ONE'},
+            {x: -2, z: -5, type: 'ONE'},
+            {x: -2, z: -4, type: 'ONE'},
+            {x: -2, z: -3, type: 'ONE'},
+            {x: -2, z: -2, type: 'ONE'},
+            {x: -2, z: -1, type: 'ONE'},
+            {x: -2, z: 0, type: 'END'},
           ]}
         ];
 
