--- a/aframe/index.html
+++ b/aframe/index.html
@@ -551,7 +551,7 @@
         animation="property: object3D.rotation.y; to: 360; dur: 1500; loop: true"
         material="src: restart.png;" radius="0.5" height="1.5"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky src="skybox.jpeg"></a-sky>
 
       <a-box raycaster-listener cursor-listener class="clickable" id="evert" material="src: evs.jpg;" position="0 2 -5" rotation="0 45 45" scale="1 1 1" 
       animation="property: object3D.position.y; to: 6; dir: alternate; dur: 3000; loop: true"
@@ -569,7 +569,7 @@
       animation="property: object3D.position.y; to: 3; dir: alternate; dur: 500; loop: true"
       animation="property: object3D.rotation.y; to: 0.8; dir: alternate; dur: 500; loop: true"></a-box>
 
-   
+
       <a-entity
       
     id="menu"
